# Slice

./: .gitignore  CLAUDE.md  OPTIMIZATION_SUMMARY.md  PDF_EDITING_ENABLED.md  README.md  SKILLS_IMPLEMENTATION.md  pyproject.toml
slice-skills/: README.md  git-status.md  hello.md  test-skill.md
src/slice/: __init__.py  chat.py  convert_helpers.py  document_reader.py  document_writer.py  executor.py  main.py  skills.py  ui.py
src/slice_agent/: __init__.py  agent.py  chat.py  document_reader.py  document_writer.py  executor.py  main.py  ui.py
tests/: __init__.py
