[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slice-agent"
version = "0.1.0"
description = "A CLI agent that leverages local Ollama models with interactive selection and permission-gated actions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "ollama>=0.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
slice = "slice_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
