[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slice"
version = "1.1.0"
description = "A local-first IDE wrapper for Ollama models. Chat naturally. Edit code with diffs. Read/write documents. All permission-gated."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "ollama>=0.1.0",
    "prompt-toolkit>=3.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.0",
]

[project.scripts]
slice = "slice.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
